--- a/notebooks/alignment/align.py.ipynb
+++ b/notebooks/alignment/align.py.ipynb
@@ -62,6 +62,36 @@
    "source": [
     "result = parasail.sg_striped_32(\"AAA\", \"AAB\", 1, 1, )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7ed7d843-76b9-45a2-8989-6851c13ae8e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import ceil\n",
+    "ceil(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246bb660-5db1-429d-b63f-93fafd16c10b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
