--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -49,6 +49,7 @@
     "    WeightedLowHash,\n",
     "    PAFNearestNeighbors,\n",
     "    LowHash,\n",
+    "    HNSW,\n",
     "    _NearestNeighbors,\n",
     ")\n",
     "from graph import ReadGraph, GenomicInterval\n",
@@ -66,6 +67,7 @@
     "sample = snakemake.wildcards['sample']\n",
     "dataset = snakemake.wildcards['platform']\n",
     "region = snakemake.wildcards['region']\n",
+    "print(sample, dataset, region)\n",
     "\n",
     "npz_path = snakemake.input['feature_matrix']\n",
     "tsv_path = snakemake.input['metadata']\n",
@@ -200,7 +202,7 @@
     "        n_neighbors=6,\n",
     "        nearest_neighbor_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
     "    ),\n",
-    "    # LowHash \n",
+    "    # LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=LowHash,\n",
     "        use_tfidf=False,\n",
@@ -227,7 +229,20 @@
     "            seed=458,\n",
     "        ),\n",
     "    ),\n",
-    "    # Weighted LowHash \n",
+    "    NearestNeighborsConfig(\n",
+    "        method=LowHash,\n",
+    "        use_tfidf=False,\n",
+    "        n_neighbors=1_000,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_fraction=0.01,\n",
+    "            repeats=100,\n",
+    "            max_bucket_size=10,\n",
+    "            min_cooccurence_count=2,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "    ),\n",
+    "    # Weighted LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
     "        use_tfidf=False,\n",
@@ -280,6 +295,60 @@
     "            seed=458,\n",
     "        ),\n",
     "    ),\n",
+    "    # NNdescent\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=NNDescent,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        n_neighbors=6,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=1),\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=NNDescent,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        n_neighbors=12,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=1),\n",
+    "    ),\n",
+    "    # DimReduction + HNSW \n",
+    "    NearestNeighborsConfig(\n",
+    "        method=HNSW,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=100,\n",
+    "        n_neighbors=6,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=HNSW,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=100,\n",
+    "        n_neighbors=12,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=HNSW,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=1000,\n",
+    "        n_neighbors=6,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=HNSW,\n",
+    "        use_tfidf=True,\n",
+    "        dim_reduction=1000,\n",
+    "        n_neighbors=12,\n",
+    "        require_mutual_neighbors=False,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "    ),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "small_data_configs = [\n",
     "    # Euclidean (exact)\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
@@ -329,7 +398,10 @@
     "        require_mutual_neighbors=False,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "    ),\n",
-    "]"
+    "]\n",
+    "\n",
+    "if feature_matrix.shape[0] <= 100_000:\n",
+    "    configs += small_data_configs"
    ]
   },
   {
@@ -432,9 +504,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plot_configs(\n",
-    "    configs, reference_graph=reference_graph, metadata=meta_df, layout_method=\"sfdp\", processes=threads\n",
-    ")"
+    "if feature_matrix.shape[0] <= 100_000:\n",
+    "    plot_configs(\n",
+    "        configs, reference_graph=reference_graph, metadata=meta_df, layout_method=\"sfdp\", processes=threads\n",
+    "    )"
    ]
   },
   {
