Add PQ; add binarization

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle, os, gzip, json, sys\n",
+    "import pickle, os, gzip, json, sys, itertools\n",
     "from pathlib import Path\n",
     "from importlib import reload\n",
     "from dataclasses import dataclass, field\n",
@@ -52,9 +52,10 @@
     "    PAFNearestNeighbors,\n",
     "    LowHash,\n",
     "    HNSW,\n",
+    "    ProductQuantization,\n",
     "    _NearestNeighbors,\n",
     ")\n",
-    "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics\n",
+    "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
     "from evaluate import NearestNeighborsConfig, mp_evaluate_configs\n",
     "from plots import plot_read_graph, mp_plot_read_graphs, get_graphviz_layout, get_umap_layout"
@@ -211,54 +212,89 @@
     "    # DimReduction + HNSW \n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
-    "        use_tfidf=True,\n",
+    "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
-    "        use_tfidf=True,\n",
+    "        tfidf=True,\n",
     "        dim_reduction=300,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
-    "    # LowHash\n",
+    "    LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=LowHash,\n",
-    "        use_tfidf=False,\n",
+    "        description=\"LowHash\",\n",
+    "        tfidf=False,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            repeats=100,\n",
     "            max_bucket_size=10,\n",
-    "            min_cooccurence_count=2,\n",
+    "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
     "        **kw\n",
     "    ),\n",
-    "    # Weighted LowHash\n",
+    "    Weighted LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
-    "        use_tfidf=False,\n",
+    "        description=\"Weighted LowHash\",\n",
+    "        tfidf=False,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            repeats=100,\n",
     "            max_bucket_size=10,\n",
-    "            min_cooccurence_count=2,\n",
+    "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
-    "        use_tfidf=True,\n",
+    "        description=\"Weighted LowHash (TF-IDF)\",\n",
+    "        tfidf=True,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            repeats=100,\n",
     "            max_bucket_size=10,\n",
-    "            min_cooccurence_count=2,\n",
+    "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=WeightedLowHash,\n",
+    "        description=\"Weighted MinHash (TF-IDF)\",\n",
+    "        tfidf=True,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_count=1,\n",
+    "            max_bucket_size=10,\n",
+    "            repeats=1000,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=WeightedLowHash,\n",
+    "        description=\"Weighted LowHash (binarize + TF-IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_fraction=0.01,\n",
+    "            max_bucket_size=10,\n",
+    "            repeats=100,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    # PQ\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=ProductQuantization,\n",
+    "        description=\"PQ (binarize + TF-IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=100,\n",
+    "        nearest_neighbor_kw=dict(nbits=6),\n",
     "        **kw\n",
     "    ),\n",
     "]\n",
@@ -268,36 +304,56 @@
     "    # NNdescent\n",
     "    NearestNeighborsConfig(\n",
     "        method=NNDescent,\n",
-    "        use_tfidf=True,\n",
+    "        tfidf=True,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
     "        **kw\n",
     "    ),\n",
-    "    # Euclidean (exact)\n",
+    "    Euclidean (exact)\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        use_tfidf=False,\n",
+    "        description=\"Exact Euclidean\",\n",
+    "        tfidf=False,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        use_tfidf=True,\n",
+    "        description=\"Exact Euclidean (TF-IDF)\",\n",
+    "        tfidf=True,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        use_tfidf=True,\n",
+    "        description=\"Exact Euclidean (binarize)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=False,\n",
+    "        dim_reduction=None,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (binarize + TF-IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=ExactNearestNeighbors,\n",
+    "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        use_tfidf=True,\n",
+    "        tfidf=True,\n",
     "        dim_reduction=300,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
@@ -306,6 +362,17 @@
     "\n",
     "if feature_matrix.shape[0] <= 10_000:\n",
     "    configs += small_data_configs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe669b77-1e89-4394-9c3f-3141ffc277b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, config in enumerate(configs):\n",
+    "    print(i, config, sep='\\t')"
    ]
   },
   {
@@ -356,43 +423,57 @@
    "outputs": [],
    "source": [
     "df_rows = []\n",
-    "for i in range(len(configs)):\n",
+    "for i, config in enumerate(configs):\n",
     "    print(i, end=' ')\n",
     "    for k in k_values:\n",
     "        graph = graphs[i][k]\n",
     "        stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
-    "        stats = {\"config_id\": i, \"description\": str(config), \"n_neighbors\": k, **stats}\n",
+    "        stats = {\"config_id\": i, \"description\": config.description, \"n_neighbors\": k, **stats}\n",
     "        df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
-    "df.to_csv(os.path.join(output_folder, \"overlap_statistics.tsv\"),  sep='\\t')"
+    "df.to_csv(os.path.join(output_folder, \"overlap_statistics.tsv\"),  sep='\\t')\n",
+    "df['label'] = df['config_id'].map(str) + \" \" + df['description']\n",
+    "df['connected_fraction'] = 1 - df['singleton_fraction']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ccd3589-d15d-498a-b24f-f32f4f5e6661",
+   "id": "f2657f42-c988-40f0-802d-48aec79aa14a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "g = seaborn.lineplot(ax=ax, data=df, x='n_neighbors', y=\"nr_recall\", hue='config_id', palette='tab20')\n",
-    "ax.set_xticks(k_values)\n",
-    "ax.set_xlabel(\"Number of neighbors\")\n",
-    "ax.set_ylabel(\"Recall (non-redundant overlaps)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f633230b-3b49-4447-a72d-0d4a1d2cb101",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "g = seaborn.lineplot(ax=ax, data=df, x='n_neighbors', y=\"precision\", hue='config_id', palette='tab20')\n",
-    "ax.set_xticks(k_values)\n",
-    "ax.set_xlabel(\"Number of neighbors\")\n",
-    "ax.set_ylabel(\"Precision\")"
+    "y_labels = dict(\n",
+    "    precision=\"Precision\",\n",
+    "    nr_recall=\"Recall (non-redundant overlaps)\",\n",
+    "    N50=\"Graph N50 (after removing incorrect edges)\",\n",
+    "    connected_fraction=\"Connected fraction (after removing incorrect edges)\"\n",
+    ")\n",
+    "\n",
+    "if len(configs) <= 10:\n",
+    "    palette = \"tab10\"\n",
+    "elif len(configs) <= 20:\n",
+    "    palette = 'tab20'\n",
+    "else:\n",
+    "    palette = 'rainbow'\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(14, 8), constrained_layout=True)\n",
+    "for i, ax in enumerate( itertools.chain(*axes) ):\n",
+    "    y = list(y_labels)[i]\n",
+    "    x = 'n_neighbors'\n",
+    "    hue = 'label'\n",
+    "    g = seaborn.lineplot(ax=ax, data=df, x=x, y=y, hue=hue, palette=palette)\n",
+    "    ax.set_xticks(k_values)\n",
+    "    ax.set_xlabel(\"Number of neighbors\")\n",
+    "    ax.set_ylabel(y_labels[y])\n",
+    "    ax.grid(axis='both', color='k', alpha=0.1)\n",
+    "\n",
+    "    if i == 1:\n",
+    "        ax.legend(loc=\"upper left\", bbox_to_anchor=(1.02, 1))\n",
+    "    else:\n",
+    "        ax.get_legend().remove()\n",
+    "\n",
+    "    ax.spines[['top', 'right']].set_visible(False)"
    ]
   },
   {
@@ -400,7 +481,7 @@
    "id": "1de54f10-74a0-4d6e-a46c-7db3f2f8e727",
    "metadata": {},
    "source": [
-    "## Visualisation"
+    "## Graph visualisation"
    ]
   },
   {
@@ -410,22 +491,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_singletons(graph):\n",
-    "    singletons = []\n",
-    "    for node in graph.nodes:\n",
-    "        if len(graph[node]) <= 1:\n",
-    "            singletons.append(node)\n",
-    "    graph.remove_nodes_from(singletons)\n",
-    "\n",
-    "def remove_false_edges(graph, reference_graph):\n",
-    "    false_edges= []\n",
-    "    for u, v in graph.edges:\n",
-    "        if not reference_graph.has_edge(u, v):\n",
-    "            false_edges.append((u,v))\n",
-    "    graph.remove_edges_from(false_edges)\n",
+    "def remove_small_components(graph, min_component_size=10):\n",
+    "    small_components = set()\n",
+    "    for component in nx.connected_components(graph):\n",
+    "        if len(component) < min_component_size:\n",
+    "            small_components |= component\n",
+    "    graph.remove_nodes_from(small_components)\n",
     "            \n",
     "    \n",
-    "def plot_graphs(graphs, reference_graph, metadata, *, processes=8, layout_method='stdp', figsize=(6, 6), node_size=3,\n",
+    "def plot_graphs(graphs, reference_graph, metadata, *, min_component_size=10, \n",
+    "                processes=8, layout_method='stdp', figsize=(6, 6), node_size=3,\n",
     "    seed: int = 4829, verbose=True):\n",
     "    axes = []\n",
     "    figures = []\n",
@@ -434,16 +509,17 @@
     "    for g in graphs:\n",
     "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6), constrained_layout=True)\n",
     "        figures.append(fig)\n",
-    "        ax1.set_title(\"Raw\")\n",
-    "        ax2.set_title(\"False edges removed\")\n",
+    "        ax1.set_title(\"All edges\")\n",
+    "        ax2.set_title(\"Correct edges\")\n",
     "        \n",
     "        g = g.copy()\n",
-    "        remove_singletons(g)\n",
+    "        remove_small_components(g, min_component_size=min_component_size)\n",
     "        new_graphs.append(g)\n",
     "        axes.append(ax1)\n",
     "\n",
     "        g = g.copy()\n",
     "        remove_false_edges(g, reference_graph)\n",
+    "        remove_small_components(g, min_component_size=min_component_size)\n",
     "        new_graphs.append(g)\n",
     "        axes.append(ax2)\n",
     "\n",
@@ -514,6 +590,14 @@
     "    k12_graphs, reference_graph=reference_graph, metadata=meta_df, layout_method=\"sfdp\", processes=threads\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b807ec46-88dc-4a1a-97da-993aae1b0875",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
