--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -30,14 +30,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1f3dd54e-efb8-49f2-807e-037bb09780e2",
-   "metadata": {},
-   "source": [
-    "## Load data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "04e44b36-4f11-4ed5-81b3-d1612186a830",
@@ -57,8 +49,35 @@
     ")\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
-    "from evaluate import NearestNeighborsConfig, mp_evaluate_configs\n",
+    "from evaluate import NearestNeighborsConfig, mp_compute_nearest_neighbors\n",
     "from plots import plot_read_graph, mp_plot_read_graphs, get_graphviz_layout, get_umap_layout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14424fac-7bf9-4e76-9864-1c856d5532d0",
+   "metadata": {},
+   "source": [
+    "## Parameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f51d1d2b-7df2-4747-baa0-e2f8adaf8d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_SAMPLE_SIZE = int(1e9)\n",
+    "COVERAGE_DEPTH = 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f3dd54e-efb8-49f2-807e-037bb09780e2",
+   "metadata": {},
+   "source": [
+    "## Load data"
    ]
   },
   {
@@ -71,7 +90,6 @@
     "sample = snakemake.wildcards['sample']\n",
     "dataset = snakemake.wildcards['platform']\n",
     "region = snakemake.wildcards['region']\n",
-    "print(sample, dataset, region)\n",
     "\n",
     "npz_path = snakemake.input['feature_matrix']\n",
     "tsv_path = snakemake.input['metadata']\n",
@@ -80,7 +98,9 @@
     "\n",
     "output_folder = snakemake.output['folder']\n",
     "\n",
-    "threads  = snakemake.threads"
+    "threads  = snakemake.threads\n",
+    "\n",
+    "print(sample, dataset, region)"
    ]
   },
   {
@@ -90,8 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_SAMPLE_SIZE = int(1e9)\n",
-    "\n",
     "meta_df = pd.read_table(tsv_path).iloc[:MAX_SAMPLE_SIZE, :].reset_index()\n",
     "read_indices = {read_name: read_id for read_id, read_name in meta_df['read_name'].items()}\n",
     "\n",
@@ -112,7 +130,8 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(8, 2.5))\n",
-    "ax.hist([len(x) for x in read_features.values()], bins=100);\n",
+    "ax.hist([len(x) for x in read_features.values()], bins=100)\n",
+    "ax.set_xlim(left=0)\n",
     "ax.set_xlabel(\"Number of features per read\")\n",
     "ax.set_ylabel(\"Number of reads\")\n",
     "ax.grid(color='k', alpha=0.1)"
@@ -201,17 +220,20 @@
    "outputs": [],
    "source": [
     "kw = dict(data=feature_matrix)\n",
+    "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
     "\n",
     "configs = [\n",
     "    # Minimap2 all-vs-all\n",
     "    NearestNeighborsConfig(\n",
     "        method=PAFNearestNeighbors,\n",
+    "        description=\"Minimap2 all-vs-all\",\n",
     "        nearest_neighbor_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
     "        **kw\n",
     "    ),\n",
     "    # DimReduction + HNSW \n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
+    "        description=\"HNSW (TF-IDF, 100 dim.)\",\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -219,32 +241,33 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
+    "        description=\"HNSW (TF-IDF, 300 dim.)\",\n",
     "        tfidf=True,\n",
     "        dim_reduction=300,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
-    "    LowHash\n",
+    "    # LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=LowHash,\n",
-    "        description=\"LowHash\",\n",
+    "        description=\"LowHash (binary)\",\n",
     "        tfidf=False,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=10,\n",
+    "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
     "        **kw\n",
     "    ),\n",
-    "    Weighted LowHash\n",
+    "    # Weighted LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash\",\n",
+    "        description=\"Weighted LowHash (TF)\",\n",
     "        tfidf=False,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=10,\n",
+    "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
@@ -256,7 +279,7 @@
     "        tfidf=True,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=10,\n",
+    "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
@@ -267,21 +290,21 @@
     "        description=\"Weighted MinHash (TF-IDF)\",\n",
     "        tfidf=True,\n",
     "        nearest_neighbor_kw=dict(\n",
-    "            lowhash_count=1,\n",
-    "            max_bucket_size=10,\n",
-    "            repeats=1000,\n",
+    "            lowhash_count=20,\n",
+    "            max_bucket_size=max_bucket_size,\n",
+    "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash (binarize + TF-IDF)\",\n",
+    "        description=\"Weighted LowHash (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=10,\n",
+    "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
     "            seed=458,\n",
     "        ),\n",
@@ -290,7 +313,7 @@
     "    # PQ\n",
     "    NearestNeighborsConfig(\n",
     "        method=ProductQuantization,\n",
-    "        description=\"PQ (binarize + TF-IDF)\",\n",
+    "        description=\"PQ (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
@@ -301,18 +324,19 @@
     "\n",
     "\n",
     "small_data_configs = [\n",
-    "    # NNdescent\n",
-    "    NearestNeighborsConfig(\n",
-    "        method=NNDescent,\n",
-    "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    Euclidean (exact)\n",
+    "    # # NNdescent\n",
+    "    # NearestNeighborsConfig(\n",
+    "    #     method=NNDescent,\n",
+    "    #     description=\"NNdescent (TF-IDF)\",\n",
+    "    #     tfidf=True,\n",
+    "    #     dim_reduction=None,\n",
+    "    #     nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
+    "    #     **kw\n",
+    "    # ),\n",
+    "    # Euclidean (exact)\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean\",\n",
+    "        description=\"Exact Euclidean (TF)\",\n",
     "        tfidf=False,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -328,7 +352,7 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (binarize)\",\n",
+    "        description=\"Exact Euclidean (binary)\",\n",
     "        binarize=True,\n",
     "        tfidf=False,\n",
     "        dim_reduction=None,\n",
@@ -337,7 +361,7 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (binarize + TF-IDF)\",\n",
+    "        description=\"Exact Euclidean (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
     "        dim_reduction=None,\n",
@@ -346,6 +370,7 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (TF-IDF, 100 dim.)\",\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -353,6 +378,7 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (TF-IDF, 300 dim.)\",        \n",
     "        tfidf=True,\n",
     "        dim_reduction=300,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -360,7 +386,7 @@
     "    ),\n",
     "]\n",
     "\n",
-    "if feature_matrix.shape[0] <= 10_000:\n",
+    "if feature_matrix.shape[0] <= 20_000:\n",
     "    configs += small_data_configs"
    ]
   },
@@ -384,11 +410,11 @@
    "source": [
     "%%time\n",
     "\n",
-    "max_n_neighbors = 20\n",
+    "max_n_neighbors = COVERAGE_DEPTH\n",
+    "processes = threads if feature_matrix.shape[0] <= 20_000 else 1\n",
     "\n",
-    "for i, config in enumerate(configs):\n",
-    "    print(i, config, sep='\\t')\n",
-    "    config.compute_nearest_neighbors(n_neighbors=max_n_neighbors)"
+    "mp_compute_nearest_neighbors(data=feature_matrix, configs=configs, n_neighbors=max_n_neighbors, \n",
+    "                            processes=processes)"
    ]
   },
   {
@@ -595,6 +621,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b807ec46-88dc-4a1a-97da-993aae1b0875",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c7d2a6-de98-4b33-8a2f-37513f9c7cff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a91f68b-eb8e-4aaa-8d47-114ebaa8d582",
    "metadata": {},
    "outputs": [],
    "source": []
