Test number of dimensions; add daligner

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -223,6 +223,7 @@
     "max_bucket_size = COVERAGE_DEPTH * 1.5\n",
     "\n",
     "configs = [\n",
+    "    \n",
     "    # Minimap2 all-vs-all\n",
     "    NearestNeighborsConfig(\n",
     "        method=PAFNearestNeighbors,\n",
@@ -230,10 +231,12 @@
     "        nearest_neighbor_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
     "        **kw\n",
     "    ),\n",
+    "    \n",
     "    # DimReduction + HNSW \n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
-    "        description=\"HNSW (TF-IDF, 100 dim.)\",\n",
+    "        description=\"HNSW (IDF, 100 dim.)\",\n",
+    "        binarize=True,\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -241,9 +244,9 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=HNSW,\n",
-    "        description=\"HNSW (TF-IDF, 300 dim.)\",\n",
+    "        description=\"HNSW (TF-IDF, 100 dim.)\",\n",
     "        tfidf=True,\n",
-    "        dim_reduction=300,\n",
+    "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
@@ -260,11 +263,37 @@
     "        ),\n",
     "        **kw\n",
     "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=LowHash,\n",
+    "        description=\"MinHash (binary)\",\n",
+    "        tfidf=False,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_count=20,\n",
+    "            max_bucket_size=max_bucket_size,\n",
+    "            repeats=100,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    \n",
     "    # Weighted LowHash\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
     "        description=\"Weighted LowHash (TF)\",\n",
     "        tfidf=False,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_fraction=0.01,\n",
+    "            max_bucket_size=max_bucket_size,\n",
+    "            repeats=100,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=WeightedLowHash,\n",
+    "        description=\"Weighted LowHash (IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
     "        nearest_neighbor_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
     "            max_bucket_size=max_bucket_size,\n",
@@ -285,6 +314,32 @@
     "        ),\n",
     "        **kw\n",
     "    ),\n",
+    "    \n",
+    "    NearestNeighborsConfig(\n",
+    "        method=WeightedLowHash,\n",
+    "        description=\"Weighted MinHash (TF)\",\n",
+    "        tfidf=False,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_count=20,\n",
+    "            max_bucket_size=max_bucket_size,\n",
+    "            repeats=100,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=WeightedLowHash,\n",
+    "        description=\"Weighted MinHash (IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        nearest_neighbor_kw=dict(\n",
+    "            lowhash_count=20,\n",
+    "            max_bucket_size=max_bucket_size,\n",
+    "            repeats=100,\n",
+    "            seed=458,\n",
+    "        ),\n",
+    "        **kw\n",
+    "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=WeightedLowHash,\n",
     "        description=\"Weighted MinHash (TF-IDF)\",\n",
@@ -297,24 +352,21 @@
     "        ),\n",
     "        **kw\n",
     "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
-    "        description=\"Weighted LowHash (IDF)\",\n",
-    "        binarize=True,\n",
-    "        tfidf=True,\n",
-    "        nearest_neighbor_kw=dict(\n",
-    "            lowhash_fraction=0.01,\n",
-    "            max_bucket_size=max_bucket_size,\n",
-    "            repeats=100,\n",
-    "            seed=458,\n",
-    "        ),\n",
-    "        **kw\n",
-    "    ),\n",
+    "    \n",
     "    # PQ\n",
     "    NearestNeighborsConfig(\n",
     "        method=ProductQuantization,\n",
-    "        description=\"PQ (IDF)\",\n",
+    "        description=\"PQ (IDF, 100 dim.)\",\n",
     "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=100,\n",
+    "        nearest_neighbor_kw=dict(nbits=6),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=ProductQuantization,\n",
+    "        description=\"PQ (TF-IDF, 100 dim.)\",\n",
+    "        binarize=False,\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(nbits=6),\n",
@@ -324,19 +376,31 @@
     "\n",
     "\n",
     "small_data_configs = [\n",
-    "    # # NNdescent\n",
-    "    # NearestNeighborsConfig(\n",
-    "    #     method=NNDescent,\n",
-    "    #     description=\"NNdescent (TF-IDF)\",\n",
-    "    #     tfidf=True,\n",
-    "    #     dim_reduction=None,\n",
-    "    #     nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
-    "    #     **kw\n",
-    "    # ),\n",
+    "    \n",
+    "    # NNdescent\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=NNDescent,\n",
+    "        description=\"NNdescent (IDF)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=NNDescent,\n",
+    "        description=\"NNdescent (TF-IDF)\",\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    \n",
     "    # Euclidean (exact)\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF)\",\n",
+    "        description=\"Exact Euclidean (binary)\",\n",
+    "        binarize=True,\n",
     "        tfidf=False,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -344,16 +408,7 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF)\",\n",
-    "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
-    "        **kw\n",
-    "    ),\n",
-    "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (binary)\",\n",
-    "        binarize=True,\n",
+    "        description=\"Exact Euclidean (TF)\",\n",
     "        tfidf=False,\n",
     "        dim_reduction=None,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -370,7 +425,16 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF, 100 dim.)\",\n",
+    "        description=\"Exact Euclidean (TF-IDF)\",\n",
+    "        tfidf=True,\n",
+    "        dim_reduction=None,\n",
+    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (IDF, 100 dim.)\",\n",
+    "        binarize=True,\n",
     "        tfidf=True,\n",
     "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
@@ -378,12 +442,13 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF, 300 dim.)\",        \n",
+    "        description=\"Exact Euclidean (TF-IDF, 100 dim.)\",\n",
     "        tfidf=True,\n",
-    "        dim_reduction=300,\n",
+    "        dim_reduction=100,\n",
     "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
+    "    \n",
     "]\n",
     "\n",
     "if feature_matrix.shape[0] <= 20_000:\n",
