Simplify config evaluation API; Add JIT LowHash (unfinished)

--- a/notebooks/dim_reduction/dim_reduction.py.ipynb
+++ b/notebooks/dim_reduction/dim_reduction.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "a66ac6bd-b29b-48b6-9cf8-e5dd33f2e767",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "04e44b36-4f11-4ed5-81b3-d1612186a830",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ecs-user/workspace/kNN-overlap-finder/scripts/../lib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
     "from nearest_neighbors import (\n",
@@ -435,8 +427,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.38 s, sys: 32.1 ms, total: 6.42 s\n",
-      "Wall time: 6.41 s\n"
+      "CPU times: user 5.45 s, sys: 23.4 ms, total: 5.47 s\n",
+      "Wall time: 5.47 s\n"
      ]
     },
     {
@@ -468,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "ee313d87-069a-4cc3-9c8c-45a834ff2411",
    "metadata": {},
    "outputs": [],
@@ -536,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "fe669b77-1e89-4394-9c3f-3141ffc277b4",
    "metadata": {},
    "outputs": [
@@ -544,12 +536,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 30 dim.)', binarize=True, tfidf=True, dim_reduction=30, _elapsed_time=None)\n",
-      "1\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 50 dim.)', binarize=True, tfidf=True, dim_reduction=50, _elapsed_time=None)\n",
-      "2\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 100 dim.)', binarize=True, tfidf=True, dim_reduction=100, _elapsed_time=None)\n",
-      "3\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 200 dim.)', binarize=True, tfidf=True, dim_reduction=200, _elapsed_time=None)\n",
-      "4\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 500 dim.)', binarize=True, tfidf=True, dim_reduction=500, _elapsed_time=None)\n",
-      "5\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 1000 dim.)', binarize=True, tfidf=True, dim_reduction=500, _elapsed_time=None)\n"
+      "0\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 30 dim.)', binarize=True, tfidf=True, dim_reduction=30)\n",
+      "1\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 50 dim.)', binarize=True, tfidf=True, dim_reduction=50)\n",
+      "2\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 100 dim.)', binarize=True, tfidf=True, dim_reduction=100)\n",
+      "3\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 200 dim.)', binarize=True, tfidf=True, dim_reduction=200)\n",
+      "4\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 500 dim.)', binarize=True, tfidf=True, dim_reduction=500)\n",
+      "5\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 1000 dim.)', binarize=True, tfidf=True, dim_reduction=500)\n"
      ]
     }
    ],
@@ -560,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "6ae6103e-4222-4bfd-ab3a-9c23f3d25331",
    "metadata": {},
    "outputs": [
@@ -569,10 +561,10 @@
      "output_type": "stream",
      "text": [
       "Evaluating 6 configs using 6 processes.\n",
-      "321450      Binarization.Binarization.Binarization.Binarization.\n",
+      "031245      Binarization.Binarization.\n",
       "\n",
-      "\n",
-      "\n",
+      "Binarization.\n",
+      "Binarization.\n",
       "Binarization.Binarization.\n",
       "\n",
       "TF-IDF transform.\n",
@@ -587,15 +579,15 @@
       "Dimension reduction.\n",
       "Dimension reduction.\n",
       "Dimension reduction.\n",
-      "Elapsed time: 51.23 s\n",
-      "Elapsed time: 85.84 s\n",
-      "Elapsed time: 136.86 s\n",
-      "Elapsed time: 215.19 s\n",
-      "Elapsed time: 545.65 s\n",
-      "Elapsed time: 545.81 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 30 dim.)', binarize=True, tfidf=True, dim_reduction=30). Elapsed time: 57.82 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 50 dim.)', binarize=True, tfidf=True, dim_reduction=50). Elapsed time: 120.97 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 100 dim.)', binarize=True, tfidf=True, dim_reduction=100). Elapsed time: 186.20 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 200 dim.)', binarize=True, tfidf=True, dim_reduction=200). Elapsed time: 261.72 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 500 dim.)', binarize=True, tfidf=True, dim_reduction=500). Elapsed time: 693.61 s\n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF, 1000 dim.)', binarize=True, tfidf=True, dim_reduction=500). Elapsed time: 709.47 s\n",
       "\n",
-      "CPU times: user 1.92 s, sys: 304 ms, total: 2.22 s\n",
-      "Wall time: 9min 7s\n"
+      "CPU times: user 752 ms, sys: 139 ms, total: 891 ms\n",
+      "Wall time: 11min 49s\n"
      ]
     }
    ],
@@ -605,8 +597,12 @@
     "max_n_neighbors = COVERAGE_DEPTH\n",
     "processes = 6\n",
     "\n",
-    "mp_compute_nearest_neighbors(data=feature_matrix, configs=configs, n_neighbors=max_n_neighbors, \n",
-    "                            processes=processes)"
+    "nbr_dict = mp_compute_nearest_neighbors(\n",
+    "    data=feature_matrix,\n",
+    "    configs=configs,\n",
+    "    n_neighbors=max_n_neighbors,\n",
+    "    processes=processes,\n",
+    ")"
    ]
   },
   {
@@ -619,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "a5c0e043-b437-4432-b704-a0b32664e070",
    "metadata": {},
    "outputs": [
@@ -632,18 +628,25 @@
     }
    ],
    "source": [
+    "read_ids = np.array(list(read_features))\n",
     "graphs = collections.defaultdict(dict)\n",
     "k_values = np.arange(2, max_n_neighbors + 1)\n",
     "for i, config in enumerate(configs):\n",
-    "    print(i, end=' ')\n",
+    "    print(i, end=\" \")\n",
+    "    nbr_indices = nbr_dict[i]\n",
     "    for k in k_values:\n",
-    "        graph = config.get_overlap_graph(n_neighbors=k, read_ids=list(read_features), require_mutual_neighbors=False)\n",
+    "        graph = OverlapGraph.from_neighbor_indices(\n",
+    "            neighbor_indices=nbr_indices,\n",
+    "            n_neighbors=k,\n",
+    "            read_ids=read_ids,\n",
+    "            require_mutual_neighbors=False,\n",
+    "        )\n",
     "        graphs[i][k] = graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "7fdaf979-7946-4305-9642-a18d02a7af71",
    "metadata": {},
    "outputs": [
@@ -671,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "f2657f42-c988-40f0-802d-48aec79aa14a",
    "metadata": {},
    "outputs": [
