--- a/notebooks/jaccard/sparse_Jaccard.ipynb
+++ b/notebooks/jaccard/sparse_Jaccard.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "8cf50bbe-9192-4126-8857-922881cb36b7",
    "metadata": {},
    "outputs": [],
@@ -58,6 +58,68 @@
     "S = sparse.csr_matrix([1.5, 0, 2.0])\n",
     "T = sparse.csr_matrix([1.2, 1, 1.0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56ceaf26-0b10-4dff-ad5e-b8f8fd874ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "11b0c7e0-8d9f-44e5-9318-9c84014e448d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x3 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 2 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61aa7cf3-b723-4d9c-9a83-3b51795d24e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x3 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 2 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TfidfTransformer(use_idf=True, smooth_idf=True).fit_transform(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "734ea3c6-5294-4f64-8a0d-2f6d1cbf6ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
