--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -352,7 +352,10 @@
     "        ),\n",
     "        **kw\n",
     "    ),\n",
-    "    \n",
+    "]\n",
+    "\n",
+    "\n",
+    "small_data_configs = [\n",
     "    # PQ\n",
     "    NearestNeighborsConfig(\n",
     "        method=ProductQuantization,\n",
@@ -372,11 +375,6 @@
     "        nearest_neighbor_kw=dict(nbits=6),\n",
     "        **kw\n",
     "    ),\n",
-    "]\n",
-    "\n",
-    "\n",
-    "small_data_configs = [\n",
-    "    \n",
     "    # NNdescent\n",
     "    NearestNeighborsConfig(\n",
     "        method=NNDescent,\n",
@@ -478,8 +476,12 @@
     "max_n_neighbors = COVERAGE_DEPTH\n",
     "processes = threads if feature_matrix.shape[0] <= 20_000 else 1\n",
     "\n",
-    "mp_compute_nearest_neighbors(data=feature_matrix, configs=configs, n_neighbors=max_n_neighbors, \n",
-    "                            processes=processes)"
+    "nbr_dict = mp_compute_nearest_neighbors(\n",
+    "    data=feature_matrix,\n",
+    "    configs=configs,\n",
+    "    n_neighbors=max_n_neighbors,\n",
+    "    processes=processes,\n",
+    ")"
    ]
   },
   {
@@ -497,12 +499,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "read_ids = np.array(list(read_features))\n",
     "graphs = collections.defaultdict(dict)\n",
     "k_values = np.arange(2, max_n_neighbors + 1)\n",
     "for i, config in enumerate(configs):\n",
-    "    print(i, end=' ')\n",
+    "    print(i, end=\" \")\n",
+    "    nbr_indices = nbr_dict[i]\n",
     "    for k in k_values:\n",
-    "        graph = config.get_overlap_graph(n_neighbors=k, read_ids=list(read_features), require_mutual_neighbors=False)\n",
+    "        graph = OverlapGraph.from_neighbor_indices(\n",
+    "            neighbor_indices=nbr_indices,\n",
+    "            n_neighbors=k,\n",
+    "            read_ids=read_ids,\n",
+    "            require_mutual_neighbors=False,\n",
+    "        )\n",
     "        graphs[i][k] = graph"
    ]
   },
